Created page with "* L'utilisation des dimensions [[Sketcher_ConstrainDistanceX/fr|horizontales]] et [[Sketcher_ConstrainDistanceY/fr|verticales]] au lieu de contraintes d'égalités peut empêcher le [[Sketcher_Workbench/fr#Flipping|retournement]]. Les points contraints par ces dimensions ne changeront de place que si le signe de leur valeur est modifié. Pour que les dimensions restent égales, les contraintes peuvent être liées entre elles à l'aide d'une expression, ou à la même va..."

--- a/wiki/fr/Sketcher_ConstrainEqual.html
+++ b/wiki/fr/Sketcher_ConstrainEqual.html
@@ -2,7 +2,7 @@
 <li><a href="../de/Sketcher_ConstrainEqual.html" class="mw-pt-progress mw-pt-progress--high" title="Sketcher GleichheitFestlegen (88% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Sketcher_ConstrainEqual.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Sketcher ConstrainEqual (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../es/Sketcher_ConstrainEqual.html" class="mw-pt-progress mw-pt-progress--low" title="Croquizador RestringirIgual (12% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/Sketcher_ConstrainEqual.html" class="mw-pt-progress mw-pt-progress--high" title="Sketcher: Vincolo uguale (88% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/Sketcher_ConstrainEqual.html" class="mw-pt-progress mw-pt-progress--high" title="Szkicownik: Wi&#261;zanie r&oacute;wno&#347;ci (88% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt/Sketcher_ConstrainEqual.html" class="mw-pt-progress mw-pt-progress--low" title="Constraint EqualLength (0% translated)" lang="pt" dir="ltr">portugu&ecirc;s</a></li>
@@ -97,7 +97,7 @@
 </p><p><span id="Notes"></span>
 </p>
 <h2><span class="mw-headline" id="Remarques">Remarques</span></h2>
-<ul><li>Using <a href="../Sketcher_ConstrainDistanceX.html" title="Sketcher ConstrainDistanceX">horizontal</a> and <a href="../Sketcher_ConstrainDistanceY.html" title="Sketcher ConstrainDistanceY">vertical dimensions</a> instead of equal constraints can prevent <a href="../Sketcher_Workbench.html#Flipping" title="Sketcher Workbench">flipping</a>. Points constrained by these dimensions will only switch places if the sign of their value is changed. To keep the dimensions equal the constraints can be linked to each other with an expression, or to the same value in a <a href="../Std_VarSet.html" title="Std VarSet">VarSet</a> or <a href="../Spreadsheet_CreateSheet.html" title="Spreadsheet CreateSheet">spreadsheet</a>.</li></ul>
+<ul><li>L'utilisation des dimensions <a href="../fr/Sketcher_ConstrainDistanceX.html" title="Sketcher ConstrainDistanceX/fr">horizontales</a> et <a href="../fr/Sketcher_ConstrainDistanceY.html" title="Sketcher ConstrainDistanceY/fr">verticales</a> au lieu de contraintes d'&eacute;galit&eacute;s peut emp&ecirc;cher le <a href="../fr/Sketcher_Workbench.html#Flipping" title="Sketcher Workbench/fr">retournement</a>. Les points contraints par ces dimensions ne changeront de place que si le signe de leur valeur est modifi&eacute;. Pour que les dimensions restent &eacute;gales, les contraintes peuvent &ecirc;tre li&eacute;es entre elles &agrave; l'aide d'une expression, ou &agrave; la m&ecirc;me valeur dans un <a href="../fr/Std_VarSet.html" title="Std VarSet/fr">jeu de variables</a> ou un <a href="../fr/Spreadsheet_CreateSheet.html" title="Spreadsheet CreateSheet/fr">feuille de tableur</a>.</li></ul>
 <p><br>
 </p>
 <div class="docnav">
@@ -143,35 +143,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125125644
+Cached time: 20260125130001
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.100 seconds
-Real time usage: 0.241 seconds
+CPU time usage: 0.148 seconds
+Real time usage: 0.250 seconds
 Preprocessor visited node count: 447/1000000
 Post&#8208;expand include size: 26318/2097152 bytes
 Template argument size: 10507/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 3439/5000000 bytes
+Unstrip post&#8208;expand size: 3443/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   49.583      1 -total
- 17.14%    8.497      1 Template:GuiCommand/fr
- 16.77%    8.314      1 Template:Sketcher_Tools_navi/fr
- 16.05%    7.957      2 Template:Version/fr
- 12.26%    6.077      1 Template:Code
- 11.29%    5.599      2 Template:Navigation_menu_2
- 10.25%    5.084      1 Template:Userdocnavi/fr
- 10.24%    5.078      2 Template:Docnav/fr
-  5.80%    2.876      3 Template:KEY
-  5.34%    2.650      5 Template:MenuCommand
+100.00%   61.011      1 -total
+ 26.49%   16.162      1 Template:Sketcher_Tools_navi/fr
+ 18.24%   11.129      1 Template:GuiCommand/fr
+ 15.81%    9.645      2 Template:Navigation_menu_2
+ 10.58%    6.457      1 Template:Userdocnavi/fr
+  9.70%    5.920      2 Template:Incode
+  8.59%    5.239      2 Template:Version/fr
+  7.18%    4.381      2 Template:Docnav/fr
+  6.46%    3.944      1 Template:Code
+  5.44%    3.322      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:2482-0!canonical and timestamp 20260125125643 and revision id 1743900. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:2482-0!canonical and timestamp 20260125130001 and revision id 1743902. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
