Updated page Sketcher Workbench/fr

--- a/wiki/fr/Sketcher_Workbench.html
+++ b/wiki/fr/Sketcher_Workbench.html
@@ -370,12 +370,8 @@ Et, l'application d'une contrainte de dimension va supprimer le dernier degr&eac
 </p>
 <h4><span class="mw-headline" id="Utiliser_des_dimensions_horizontales_et_verticales">Utiliser des dimensions horizontales et verticales</span></h4>
 <p><span typeof="mw:File"><a href="../index.php?title=Sketcher_Flipping_HorVer_Dimensions.png&amp;filetimestamp=20250805174627&amp;.html" class="mw-file-description"><img src="../File/Sketcher_Flipping_HorVer_Dimensions.png" decoding="async" width="300" height="258" class="mw-file-element" data-file-width="500" data-file-height="430"></a></span>
-</p>
-<div class="mw-translate-fuzzy">
-<p>L'utilisation de <a href="../fr/Sketcher_ConstrainDistanceX.html" title="Sketcher ConstrainDistanceX/fr">dimensions horizontales</a> et <a href="../fr/Sketcher_ConstrainDistanceY.html" title="Sketcher ConstrainDistanceY/fr">dimensions verticales</a> au lieu de contraintes <a href="../fr/Sketcher_ConstrainEqual.html" title="Sketcher ConstrainEqual/fr">d'&eacute;galit&eacute;</a> peut emp&ecirc;cher le flipping. Les points contraints par ces dimensions ne changeront pas de place. Dans l'image ci-dessus, les contraintes de dimension ajout&eacute;es (en orange) sont li&eacute;es aux dimensions d'origine via des <a href="../fr/Expressions.html" title="Expressions/fr">expressions</a>.
-</p>
-</div>
-<p><span id="Use_angle_dimensions"></span>
+</p><p>L'utilisation de <a href="../fr/Sketcher_ConstrainDistanceX.html" title="Sketcher ConstrainDistanceX/fr">dimensions horizontales</a> et <a href="../fr/Sketcher_ConstrainDistanceY.html" title="Sketcher ConstrainDistanceY/fr">dimensions verticales</a> au lieu de contraintes <a href="../fr/Sketcher_ConstrainDistance.html" title="Sketcher ConstrainDistance/fr">de dimension</a> ou <a href="../fr/Sketcher_ConstrainEqual.html" title="Sketcher ConstrainEqual/fr">d'&eacute;galit&eacute;</a> peut emp&ecirc;cher le flipping. Les points contraints par ces dimensions ne changeront de place que si le signe de leur valeur est modifi&eacute;. Dans l'image ci-dessus, les contraintes de dimension ajout&eacute;es (en orange) sont li&eacute;es aux dimensions d'origine via des <a href="../fr/Expressions.html" title="Expressions/fr">expressions</a>.
+</p><p><span id="Use_angle_dimensions"></span>
 </p>
 <h4><span class="mw-headline" id="Utiliser_des_dimensions_angulaires">Utiliser des dimensions angulaires</span></h4>
 <p><span typeof="mw:File"><a href="../index.php?title=Sketcher_Flipping_Angular_Dimensions.png&amp;filetimestamp=20250805174512&amp;.html" class="mw-file-description"><img src="../File/Sketcher_Flipping_Angular_Dimensions.png" decoding="async" width="300" height="258" class="mw-file-element" data-file-width="500" data-file-height="430"></a></span>
@@ -441,12 +437,12 @@ Et, l'application d'une contrainte de dimension va supprimer le dernier degr&eac
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125102703
+Cached time: 20260125130451
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.424 seconds
-Real time usage: 1.246 seconds
+CPU time usage: 0.399 seconds
+Real time usage: 0.498 seconds
 Preprocessor visited node count: 1391/1000000
 Post&#8208;expand include size: 36091/2097152 bytes
 Template argument size: 9998/2097152 bytes
@@ -457,19 +453,19 @@ Unstrip post&#8208;expand size: 4781/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   80.849      1 -total
- 27.63%   22.340      1 Template:Sketcher_Tools_navi/fr
- 17.00%   13.743      1 Template:Userdocnavi/fr
- 16.23%   13.119      2 Template:Navigation_menu_2
- 10.69%    8.646      1 Template:PropertyView
- 10.42%    8.428      8 Template:VersionPlus/fr
-  7.69%    6.221      2 Template:Docnav/fr
-  6.27%    5.068     14 Template:KEY
-  6.23%    5.035      1 Template:Variable
-  5.25%    4.243     36 Template:Version/fr
+100.00%   37.076      1 -total
+ 21.28%    7.889      1 Template:Sketcher_Tools_navi/fr
+ 18.03%    6.685      2 Template:Navigation_menu_2
+ 12.16%    4.510      1 Template:PropertyView
+ 11.14%    4.130      1 Template:Userdocnavi/fr
+  8.21%    3.044     36 Template:Version/fr
+  8.00%    2.966      8 Template:VersionPlus/fr
+  7.51%    2.783      1 Template:Variable
+  6.58%    2.439      2 Template:Docnav/fr
+  6.18%    2.290      6 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:2136-0!canonical and timestamp 20260125102702 and revision id 1743626. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:2136-0!canonical and timestamp 20260125130451 and revision id 1743906. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
