--- a/wiki/fr/TechDraw_Symbol.html
+++ b/wiki/fr/TechDraw_Symbol.html
@@ -64,9 +64,8 @@
 <p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilisation">Utilisation</span></h2>
-<div class="mw-translate-fuzzy">
-<ol><li>S'il y a plusieurs feuilles de dessin dans le document&nbsp;: activez la feuille souhait&eacute;e en la s&eacute;lectionnant dans la <a href="../fr/Tree_view.html" class="mw-redirect" title="Tree view/fr">vue en arborescence</a>.</li>
-<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Vues de TechDraw &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_Symbol.svg&amp;filetimestamp=20240710144653&amp;.html" class="mw-file-description"><img src="../File/TechDraw_Symbol.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Ins&eacute;rer un symbole SVG</b> du menu.</li>
+<ol><li>S'il y a plusieurs feuilles de dessin dans le document&nbsp;: activez la feuille souhait&eacute;e en la s&eacute;lectionnant dans l'<a href="../fr/Tree_View.html" title="Tree View/fr">arborescence</a>.</li>
+<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Vues de l'atelier TechDraw &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_Symbol.svg&amp;filetimestamp=20240710144653&amp;.html" class="mw-file-description"><img src="../File/TechDraw_Symbol.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Symbole SVG</b> du menu.</li>
 <li>Si le document contient plusieurs feuilles de dessin et que vous n'avez pas encore activ&eacute; de feuille, la fen&ecirc;tre de dialogue <b>S&eacute;lecteur de feuilles</b> s'ouvre&nbsp;:
 <ol><li>S&eacute;lectionnez la feuille d&eacute;sir&eacute;e.</li>
 <li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span>.</li></ol></li>
@@ -74,7 +73,6 @@
 <li>S&eacute;lectionnez un fichier SVG.</li>
 <li>Un symbole est ins&eacute;r&eacute;.</li>
 <li>Vous pouvez modifier sa propri&eacute;t&eacute; <span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Scale</b> pour ajuster sa taille.</li></ol>
-</div>
 <p><span id="Notes"></span>
 </p>
 <h2><span class="mw-headline" id="Remarques">Remarques</span></h2>
@@ -159,15 +157,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125130800
+Cached time: 20260125130851
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.104 seconds
-Real time usage: 0.157 seconds
-Preprocessor visited node count: 610/1000000
-Post&#8208;expand include size: 27708/2097152 bytes
-Template argument size: 10246/2097152 bytes
+CPU time usage: 0.095 seconds
+Real time usage: 0.144 seconds
+Preprocessor visited node count: 609/1000000
+Post&#8208;expand include size: 27706/2097152 bytes
+Template argument size: 10244/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
@@ -175,19 +173,19 @@ Unstrip post&#8208;expand size: 3544/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   42.991      1 -total
- 19.62%    8.435      1 Template:TechDraw_Tools_navi/fr
- 15.92%    6.846      2 Template:Navigation_menu_2
- 12.93%    5.560      5 Template:PropertyData
- 12.35%    5.311      1 Template:Userdocnavi/fr
- 10.09%    4.338      1 Template:TitleProperty
-  6.94%    2.982      5 Template:Variable
-  6.80%    2.923      2 Template:Docnav/fr
-  6.66%    2.862      1 Template:Caption
-  5.94%    2.553      2 Template:Version/fr
+100.00%   42.051      1 -total
+ 19.46%    8.184      1 Template:TechDraw_Tools_navi/fr
+ 15.75%    6.625      1 Template:Userdocnavi/fr
+ 14.49%    6.095      2 Template:Navigation_menu_2
+ 11.64%    4.894      5 Template:PropertyData
+  8.69%    3.654      1 Template:GuiCommand/fr
+  8.31%    3.494      2 Template:Docnav/fr
+  7.16%    3.009      5 Template:Variable
+  5.74%    2.412      1 Template:TitleProperty
+  5.26%    2.214      2 Template:Version/fr
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:87772-0!canonical and timestamp 20260125130800 and revision id 1743908. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:87772-0!canonical and timestamp 20260125130851 and revision id 1743910. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
