Updated page TechDraw Symbol/fr

--- a/wiki/fr/TechDraw_Symbol.html
+++ b/wiki/fr/TechDraw_Symbol.html
@@ -76,15 +76,12 @@
 <p><span id="Notes"></span>
 </p>
 <h2><span class="mw-headline" id="Remarques">Remarques</span></h2>
-<ul><li><span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Scale Type</b> pour les symboles est toujours d&eacute;fini sur <i>Personnalis&eacute;</i> lors de la cr&eacute;ation. C'est pour plus de commodit&eacute;, car les symboles sont presque toujours mis &agrave; l'&eacute;chelle diff&eacute;remment du reste des objets de la feuille.</li></ul>
+<ul><li><span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Scale Type</b> pour les symboles est toujours d&eacute;fini sur <i>Custom</i> lors de la cr&eacute;ation. C'est pour plus de commodit&eacute;, car les symboles sont presque toujours mis &agrave; l'&eacute;chelle diff&eacute;remment du reste des objets de la feuille.</li></ul>
 <p><span id="Properties"></span>
 </p>
 <h2><span id="Propri.C3.A9t.C3.A9s"></span><span class="mw-headline" id="Propri&eacute;t&eacute;s">Propri&eacute;t&eacute;s</span></h2>
-<div class="mw-translate-fuzzy">
-<p>Voir aussi&nbsp;: <a href="../fr/Property_editor.html" class="mw-redirect" title="Property editor/fr">&Eacute;diteur de propri&eacute;t&eacute;s</a>
-</p>
-</div>
-<p>Un symbole, en fait un objet <code>TechDraw::DrawViewSymbol</code>, poss&egrave;de les <a href="../fr/TechDraw_View.html#Propri%C3%A9t%C3%A9s_Vue_de_Part" title="TechDraw View/fr">propri&eacute;t&eacute;s</a> communes &agrave; tous les types de vues. Il poss&egrave;de &eacute;galement les propri&eacute;t&eacute;s suppl&eacute;mentaires suivantes&nbsp;:
+<p>Voir aussi&nbsp;: <a href="../fr/Property_View.html" title="Property View/fr">&Eacute;diteur de propri&eacute;t&eacute;s</a>
+</p><p>Un symbole, en fait un objet <code>TechDraw::DrawViewSymbol</code>, poss&egrave;de les <a href="../fr/TechDraw_View.html#Propri%C3%A9t%C3%A9s_Vue_de_Part" title="TechDraw View/fr">propri&eacute;t&eacute;s</a> communes &agrave; tous les types de vues. Il poss&egrave;de &eacute;galement les propri&eacute;t&eacute;s suppl&eacute;mentaires suivantes&nbsp;:
 </p><p><span id="Data"></span>
 </p>
 <h3><span id="Donn.C3.A9es"></span><span class="mw-headline" id="Donn&eacute;es">Donn&eacute;es</span></h3>
@@ -157,13 +154,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125130851
+Cached time: 20260125130914
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.095 seconds
-Real time usage: 0.144 seconds
-Preprocessor visited node count: 609/1000000
+CPU time usage: 0.107 seconds
+Real time usage: 0.165 seconds
+Preprocessor visited node count: 608/1000000
 Post&#8208;expand include size: 27706/2097152 bytes
 Template argument size: 10244/2097152 bytes
 Highest expansion depth: 7/100
@@ -173,19 +170,19 @@ Unstrip post&#8208;expand size: 3544/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   42.051      1 -total
- 19.46%    8.184      1 Template:TechDraw_Tools_navi/fr
- 15.75%    6.625      1 Template:Userdocnavi/fr
- 14.49%    6.095      2 Template:Navigation_menu_2
- 11.64%    4.894      5 Template:PropertyData
-  8.69%    3.654      1 Template:GuiCommand/fr
-  8.31%    3.494      2 Template:Docnav/fr
-  7.16%    3.009      5 Template:Variable
-  5.74%    2.412      1 Template:TitleProperty
-  5.26%    2.214      2 Template:Version/fr
+100.00%   41.502      1 -total
+ 18.88%    7.835      1 Template:TechDraw_Tools_navi/fr
+ 13.69%    5.682      2 Template:Navigation_menu_2
+ 12.66%    5.256      5 Template:PropertyData
+ 11.13%    4.620      1 Template:Userdocnavi/fr
+  9.83%    4.080      1 Template:GuiCommand/fr
+  9.34%    3.878      1 Template:TitleProperty
+  8.17%    3.389      2 Template:Docnav/fr
+  7.99%    3.315      5 Template:Variable
+  6.56%    2.722      2 Template:Version/fr
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:87772-0!canonical and timestamp 20260125130851 and revision id 1743910. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:87772-0!canonical and timestamp 20260125130913 and revision id 1743914. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
