Updated page TechDraw Symbol/fr

--- a/wiki/fr/TechDraw_Symbol.html
+++ b/wiki/fr/TechDraw_Symbol.html
@@ -60,7 +60,7 @@
 </p><p><span style="font-size:small;"><a href="../fr/Release_notes_1.0.html" title="Release notes 1.0/fr">introduit dans la version 1.0</a></span>&nbsp;: l'outil <a href="../fr/TechDraw_View.html" title="TechDraw View/fr">TechDraw Vue</a> peut &eacute;galement cr&eacute;er un symbole.
 </p><p><span typeof="mw:File"><a href="../index.php?title=TechDraw_SymbolSVG_sample.png&amp;filetimestamp=20181126223408&amp;.html" class="mw-file-description"><img src="../File/TechDraw_SymbolSVG_sample.png" decoding="async" width="250" height="297" class="mw-file-element" data-file-width="322" data-file-height="383"></a></span>
 </p>
-<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Rose des vents ajout&eacute;e &agrave; la feuille de dessin. Ce symbole est disponible en installant l'extension "symbols_library" avec le <a href="../fr/Std_AddonMgr.html" title="Std AddonMgr/fr">gestionnaire des extensions</a></p>
+<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Rose des vents ajout&eacute;e &agrave; la feuille de dessin. Ce symbole est disponible en installant l'extension &laquo;&nbsp;symbols_library&nbsp;&raquo; avec le <a href="../fr/Std_AddonMgr.html" title="Std AddonMgr/fr">gestionnaire des extensions</a></p>
 <p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilisation">Utilisation</span></h2>
@@ -151,15 +151,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125130945
+Cached time: 20260125131036
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.096 seconds
-Real time usage: 0.148 seconds
+CPU time usage: 0.100 seconds
+Real time usage: 0.155 seconds
 Preprocessor visited node count: 607/1000000
-Post&#8208;expand include size: 27706/2097152 bytes
-Template argument size: 10244/2097152 bytes
+Post&#8208;expand include size: 27714/2097152 bytes
+Template argument size: 10248/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
@@ -167,19 +167,19 @@ Unstrip post&#8208;expand size: 3548/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   42.575      1 -total
- 17.69%    7.530      1 Template:TechDraw_Tools_navi/fr
- 12.07%    5.139      2 Template:Navigation_menu_2
-  9.83%    4.185      5 Template:PropertyData
-  9.41%    4.006      1 Template:Code
-  9.10%    3.874      1 Template:Userdocnavi/fr
-  8.22%    3.501      2 Template:Docnav/fr
-  8.15%    3.468      1 Template:Caption
-  7.30%    3.110      1 Template:GuiCommand/fr
-  6.63%    2.824      1 Template:TitleProperty
+100.00%   35.682      1 -total
+ 20.78%    7.414      1 Template:TechDraw_Tools_navi/fr
+ 15.54%    5.545      2 Template:Navigation_menu_2
+ 12.56%    4.480      5 Template:PropertyData
+  9.84%    3.510      1 Template:GuiCommand/fr
+  9.08%    3.240      1 Template:Userdocnavi/fr
+  7.69%    2.743      2 Template:Version/fr
+  7.54%    2.692      5 Template:Variable
+  6.84%    2.442      2 Template:Docnav/fr
+  6.23%    2.222      1 Template:TitleProperty
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:87772-0!canonical and timestamp 20260125130945 and revision id 1743916. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:87772-0!canonical and timestamp 20260125131036 and revision id 1743918. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
