--- a/wiki/fr/TechDraw_Image.html
+++ b/wiki/fr/TechDraw_Image.html
@@ -54,7 +54,7 @@
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
 <h2><span class="mw-headline" id="Description">Description</span></h2>
-<p>L'outil <b>TechDraw Image</b> ins&egrave;re une image <a href="../fr/Bitmap.html" title="Bitmap/fr">bitmap</a> (png, jpeg, jpg, bmp, etc.) &agrave; partir d'un fichier dans la feuille en tant que vue.
+<p>L'outil <b>TechDraw Image</b> ins&egrave;re une image <a href="../fr/Bitmap.html" title="Bitmap/fr">bitmap</a> (PNG, TIFF, JPEG, etc.) &agrave; partir d'un fichier dans la feuille en tant que vue.
 </p><p><span style="font-size:small;"><a href="../fr/Release_notes_1.0.html" title="Release notes 1.0/fr">introduit dans la version 1.0</a></span>&nbsp;: l'outil <a href="../fr/TechDraw_View.html" title="TechDraw View/fr">TechDraw Vue</a> peut &eacute;galement cr&eacute;er une vue d'un objet Image.
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=TechDraw_Image_example.png&amp;filetimestamp=20181126223446&amp;.html" class="mw-file-description"><img src="../File/TechDraw_Image_example.png" decoding="async" width="290" height="238" class="mw-file-element" data-file-width="290" data-file-height="238"></a></span>
 </p>
@@ -158,12 +158,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125131452
+Cached time: 20260125131514
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.109 seconds
-Real time usage: 0.192 seconds
+CPU time usage: 0.103 seconds
+Real time usage: 0.170 seconds
 Preprocessor visited node count: 763/1000000
 Post&#8208;expand include size: 28838/2097152 bytes
 Template argument size: 10094/2097152 bytes
@@ -174,19 +174,19 @@ Unstrip post&#8208;expand size: 2877/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   66.926      1 -total
- 23.25%   15.558      7 Template:PropertyData
- 14.44%    9.667      9 Template:Variable
- 12.75%    8.533      1 Template:Version/fr
- 11.32%    7.577      1 Template:TechDraw_Tools_navi/fr
-  8.93%    5.979      2 Template:TitleProperty
-  8.62%    5.768      2 Template:Navigation_menu_2
-  7.04%    4.711      1 Template:Caption
-  5.98%    4.000      1 Template:Userdocnavi/fr
-  5.54%    3.711      1 Template:GuiCommand/fr
+100.00%   61.453      1 -total
+ 16.27%   10.001      7 Template:PropertyData
+ 13.41%    8.238      1 Template:TechDraw_Tools_navi/fr
+  9.67%    5.943      9 Template:Variable
+  9.13%    5.608      2 Template:Navigation_menu_2
+  8.95%    5.498      2 Template:TitleProperty
+  7.58%    4.655      2 Template:Button
+  7.43%    4.566      1 Template:Userdocnavi/fr
+  7.41%    4.553      1 Template:GuiCommand/fr
+  5.87%    3.609      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:87781-0!canonical and timestamp 20260125131452 and revision id 1743922. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:87781-0!canonical and timestamp 20260125131514 and revision id 1743924. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
