Updated page TechDraw Image/fr

--- a/wiki/fr/TechDraw_Image.html
+++ b/wiki/fr/TechDraw_Image.html
@@ -62,9 +62,8 @@
 <p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilisation">Utilisation</span></h2>
-<div class="mw-translate-fuzzy">
-<ol><li>S'il y a plusieurs feuilles de dessin dans le document&nbsp;: activez la feuille souhait&eacute;e en la s&eacute;lectionnant dans la <a href="../fr/Tree_view.html" class="mw-redirect" title="Tree view/fr">vue en arborescence</a>.</li>
-<li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_Image.svg&amp;filetimestamp=20241127175339&amp;.html" class="mw-file-description"><img src="../File/TechDraw_Image.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Ins&eacute;rer une image bitmap</a></span></li>
+<ol><li>S'il y a plusieurs feuilles de dessin dans le document&nbsp;: activez la feuille souhait&eacute;e en la s&eacute;lectionnant dans l'<a href="../fr/Tree_View.html" title="Tree View/fr">arborescence</a>.</li>
+<li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_Image.svg&amp;filetimestamp=20241127175339&amp;.html" class="mw-file-description"><img src="../File/TechDraw_Image.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Image bitmap</a></span></li>
 <li>Si le document contient plusieurs feuilles de dessin et que vous n'avez pas encore activ&eacute; de feuille, la fen&ecirc;tre de dialogue <b>S&eacute;lecteur de feuilles</b> s'ouvre&nbsp;:
 <ol><li>S&eacute;lectionnez la feuille d&eacute;sir&eacute;e.</li>
 <li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span>.</li></ol></li>
@@ -72,7 +71,6 @@
 <li>S&eacute;lectionnez un fichier image.</li>
 <li>Une vue d'un objet Image est ins&eacute;r&eacute;e.</li>
 <li>Vous pouvez modifier sa propri&eacute;t&eacute; <span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Scale</b> pour ajuster sa taille.</li></ol>
-</div>
 <p><span id="Properties"></span>
 </p>
 <h2><span id="Propri.C3.A9t.C3.A9s"></span><span class="mw-headline" id="Propri&eacute;t&eacute;s">Propri&eacute;t&eacute;s</span></h2>
@@ -158,15 +156,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125131514
+Cached time: 20260125131607
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.103 seconds
-Real time usage: 0.170 seconds
-Preprocessor visited node count: 763/1000000
-Post&#8208;expand include size: 28838/2097152 bytes
-Template argument size: 10094/2097152 bytes
+CPU time usage: 0.098 seconds
+Real time usage: 0.177 seconds
+Preprocessor visited node count: 762/1000000
+Post&#8208;expand include size: 28825/2097152 bytes
+Template argument size: 10081/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
@@ -174,19 +172,19 @@ Unstrip post&#8208;expand size: 2877/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   61.453      1 -total
- 16.27%   10.001      7 Template:PropertyData
- 13.41%    8.238      1 Template:TechDraw_Tools_navi/fr
-  9.67%    5.943      9 Template:Variable
-  9.13%    5.608      2 Template:Navigation_menu_2
-  8.95%    5.498      2 Template:TitleProperty
-  7.58%    4.655      2 Template:Button
-  7.43%    4.566      1 Template:Userdocnavi/fr
-  7.41%    4.553      1 Template:GuiCommand/fr
-  5.87%    3.609      1 Template:Caption
+100.00%   84.972      1 -total
+ 26.28%   22.329      7 Template:PropertyData
+ 17.89%   15.203      9 Template:Variable
+ 17.84%   15.157      2 Template:TitleProperty
+  8.62%    7.324      1 Template:Version/fr
+  7.87%    6.687      6 Template:Incode
+  7.73%    6.566      1 Template:TechDraw_Tools_navi/fr
+  5.93%    5.039      2 Template:Navigation_menu_2
+  5.70%    4.847      1 Template:Userdocnavi/fr
+  5.05%    4.294      2 Template:PropertyView
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:87781-0!canonical and timestamp 20260125131514 and revision id 1743924. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:87781-0!canonical and timestamp 20260125131607 and revision id 1743926. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
