--- a/wiki/fr/TechDraw_Image.html
+++ b/wiki/fr/TechDraw_Image.html
@@ -74,11 +74,8 @@
 <p><span id="Properties"></span>
 </p>
 <h2><span id="Propri.C3.A9t.C3.A9s"></span><span class="mw-headline" id="Propri&eacute;t&eacute;s">Propri&eacute;t&eacute;s</span></h2>
-<div class="mw-translate-fuzzy">
-<p>Voir aussi&nbsp;: <a href="../fr/Property_editor.html" class="mw-redirect" title="Property editor/fr">&Eacute;diteur de propri&eacute;t&eacute;s</a>
-</p>
-</div>
-<p>Une vue d'une image, en fait un objet <code>TechDraw::DrawViewImage</code>, poss&egrave;de les <a href="../fr/TechDraw_View.html#Propri%C3%A9t%C3%A9s_Vue_de_Part" title="TechDraw View/fr">propri&eacute;t&eacute;s</a> communes &agrave; tous les types de vues. Elle poss&egrave;de &eacute;galement les propri&eacute;t&eacute;s suppl&eacute;mentaires suivantes&nbsp;:
+<p>Voir aussi&nbsp;: <a href="../fr/Property_View.html" title="Property View/fr">&Eacute;diteur de propri&eacute;t&eacute;s</a>
+</p><p>Une vue d'une image, en fait un objet <code>TechDraw::DrawViewImage</code>, poss&egrave;de les <a href="../fr/TechDraw_View.html#Propri%C3%A9t%C3%A9s_Vue_de_Part" title="TechDraw View/fr">propri&eacute;t&eacute;s</a> communes &agrave; tous les types de vues. Elle poss&egrave;de &eacute;galement les propri&eacute;t&eacute;s suppl&eacute;mentaires suivantes&nbsp;:
 </p><p><span id="Data"></span>
 </p>
 <h3><span id="Donn.C3.A9es"></span><span class="mw-headline" id="Donn&eacute;es">Donn&eacute;es</span></h3>
@@ -156,13 +153,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125131607
+Cached time: 20260125131612
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.098 seconds
-Real time usage: 0.177 seconds
-Preprocessor visited node count: 762/1000000
+CPU time usage: 0.114 seconds
+Real time usage: 0.304 seconds
+Preprocessor visited node count: 761/1000000
 Post&#8208;expand include size: 28825/2097152 bytes
 Template argument size: 10081/2097152 bytes
 Highest expansion depth: 7/100
@@ -172,19 +169,19 @@ Unstrip post&#8208;expand size: 2877/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   84.972      1 -total
- 26.28%   22.329      7 Template:PropertyData
- 17.89%   15.203      9 Template:Variable
- 17.84%   15.157      2 Template:TitleProperty
-  8.62%    7.324      1 Template:Version/fr
-  7.87%    6.687      6 Template:Incode
-  7.73%    6.566      1 Template:TechDraw_Tools_navi/fr
-  5.93%    5.039      2 Template:Navigation_menu_2
-  5.70%    4.847      1 Template:Userdocnavi/fr
-  5.05%    4.294      2 Template:PropertyView
+100.00%   88.681      1 -total
+ 13.97%   12.385      1 Template:TRUE
+ 13.20%   11.706      1 Template:TechDraw_Tools_navi/fr
+ 11.70%   10.373      1 Template:Code
+ 11.49%   10.192      7 Template:PropertyData
+ 10.29%    9.128      2 Template:Navigation_menu_2
+  8.85%    7.844      2 Template:TitleProperty
+  8.83%    7.832      9 Template:Variable
+  8.56%    7.592      1 Template:Userdocnavi/fr
+  6.44%    5.709      2 Template:Docnav/fr
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:87781-0!canonical and timestamp 20260125131607 and revision id 1743926. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:87781-0!canonical and timestamp 20260125131612 and revision id 1743928. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
