Updated page TechDraw ShareView/fr

--- a/wiki/fr/TechDraw_ShareView.html
+++ b/wiki/fr/TechDraw_ShareView.html
@@ -55,10 +55,10 @@
 </p><p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilisation">Utilisation</span></h2>
-<ol><li>S&eacute;lectionner au choix une vue, une feuille de d&eacute;part et une feuille de destination. Les feuilles doivent &ecirc;tre s&eacute;lectionn&eacute;es dans cet ordre.</li>
+<ol><li>S&eacute;lectionnez au choix une vue, une feuille de d&eacute;part et une feuille de destination. Les feuilles doivent &ecirc;tre s&eacute;lectionn&eacute;es dans cet ordre.</li>
 <li>Il existe plusieurs fa&ccedil;ons de lancer l'outil&nbsp;:
-<ul><li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_ShareView.svg&amp;filetimestamp=20240710143133&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ShareView.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Partager une vue avec une autre feuille</a></span>.</li>
-<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Vues de Techdraw &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_ShareView.svg&amp;filetimestamp=20240710143133&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ShareView.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Partager une vue avec une autre feuille</b> du menu.</li></ul></li>
+<ul><li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_ShareView.svg&amp;filetimestamp=20240710143133&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ShareView.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Partager une vue</a></span>.</li>
+<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Vues de l'atelier Techdraw &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_ShareView.svg&amp;filetimestamp=20240710143133&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ShareView.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Partager une vue</b> du menu.</li></ul></li>
 <li>Une fen&ecirc;tre de dialogue s'ouvre pour vous permettre de s&eacute;lectionner une vue, une feuille de d&eacute;part et une feuille de destination.</li>
 <li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span>.</li></ol>
 <p><span id="Notes"></span>
@@ -125,15 +125,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125131805
+Cached time: 20260125131847
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.074 seconds
-Real time usage: 0.110 seconds
+CPU time usage: 0.070 seconds
+Real time usage: 0.113 seconds
 Preprocessor visited node count: 363/1000000
-Post&#8208;expand include size: 24793/2097152 bytes
-Template argument size: 9753/2097152 bytes
+Post&#8208;expand include size: 24757/2097152 bytes
+Template argument size: 9717/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
@@ -141,18 +141,18 @@ Unstrip post&#8208;expand size: 1868/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   24.248      1 -total
- 29.86%    7.240      1 Template:TechDraw_Tools_navi/fr
- 24.54%    5.951      2 Template:Navigation_menu_2
- 16.23%    3.935      1 Template:Userdocnavi/fr
- 15.10%    3.661      2 Template:Docnav/fr
- 10.74%    2.604      1 Template:GuiCommand/fr
- 10.09%    2.447      1 Template:Code
-  8.54%    2.070      1 Template:MenuCommand
-  6.86%    1.664      2 Template:Button
+100.00%   26.371      1 -total
+ 26.45%    6.974      1 Template:TechDraw_Tools_navi/fr
+ 21.39%    5.641      2 Template:Navigation_menu_2
+ 17.20%    4.536      1 Template:Userdocnavi/fr
+ 15.66%    4.130      2 Template:Docnav/fr
+ 13.39%    3.532      1 Template:GuiCommand/fr
+ 10.30%    2.716      1 Template:MenuCommand
+  8.16%    2.153      1 Template:Code
+  6.04%    1.592      2 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278397-0!canonical and timestamp 20260125131805 and revision id 1743932. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278397-0!canonical and timestamp 20260125131847 and revision id 1743934. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
